--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -37,7 +37,7 @@
             <li>changed fastForward logic</li>
             <li>reduced mutation rate</li>
             <li>"top fish of all times" will be kept permanently until a better one appears</li>
-            <li>actual physics engine</li>
+            <li>actual physics engine (net is only called once every 12 ticks, hopefully doesnt affect behaviour much, has massive performance boost)</li>
     </div>
     </body>
 
