--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -33,9 +33,11 @@
     <br>
     <div id="changelog">
             <li>added changelog</li>
+            <li>fish now spawn in circles</li>
             <li>proper fish serialization</li>
             <li>changed fastForward logic</li>
             <li>reduced mutation rate</li>
+            <li>updated changelog</li>
             <li>"top fish of all times" will be kept permanently until a better one appears</li>
             <li>actual physics engine (net is only called once every 12 ticks, hopefully doesnt affect behaviour much, has massive performance boost)</li>
     </div>
