--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -77,7 +77,8 @@
             inspectCtx.fillStyle = "black";
             inspectCtx.font = "15px Arial";
             inspectCtx.fillText("fitness: "+sim.fishes[inspectedFish].score, inspectCanvas.width*0.76, inspectCanvas.height*0.95);
-
+            //print current velocity (calculate from vx and vy)
+            inspectCtx.fillText("velocity: "+Math.sqrt(sim.fishes[inspectedFish].vx*sim.fishes[inspectedFish].vx+sim.fishes[inspectedFish].vy*sim.fishes[inspectedFish].vy).toFixed(3), inspectCanvas.width*0.76, inspectCanvas.height*0.9);
             let highScore = 0;
             let lowScore = Infinity;
             let avgScore = 0;
