--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -40,7 +40,9 @@
             <li>updated changelog</li>
             <li>"top fish of all times" will be kept permanently until a better one appears</li>
             <li>actual physics engine (net is only called once every 12 ticks, hopefully doesnt affect behaviour much, has massive performance boost)</li>
-    </div>
+            <li>lots of physics stuff, objective now is staying stationary</li>
+            <li>blue nodes for memory, carry their values to the next tick</li>
+        </div>
     </body>
 
 
