--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -137,10 +137,10 @@
 
         function fastForward(generations) {
             autoUpdate = false;
-            let generationTicks = 3000;
+            let generationTicks = 4000;
             for (let i = 0; i < generations; i++) {
                 let startTime = Date.now();
-                let ranTicks = sim.runGeneration(3000);
+                let ranTicks = sim.runGeneration(generationTicks);
                 let endTime = Date.now();
                 console.log("generation "+sim.generation + " finished, ticks: "+ranTicks+", time: "+(endTime-startTime)+"ms");
             }
@@ -213,7 +213,7 @@
 
 
         }
-        }, 18000);
+        }, 20000);
 
 
         function drawGraph(data){
