--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -43,6 +43,7 @@
             <li>lots of physics stuff, objective now is staying stationary</li>
             <li>blue nodes for memory, carry their values to the next tick</li>
             <li>walls are bouncy, fine tuning parameters</li>
+            <li>various things are broken</li>
         </div>
     </body>
 
