--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -44,6 +44,7 @@
             <li>blue nodes for memory, carry their values to the next tick</li>
             <li>walls are bouncy, fine tuning parameters</li>
             <li>various things are broken</li>
+            <li>removed crossover</li>
         </div>
     </body>
 
