--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -135,7 +135,7 @@
         });
 
         function activation(x) {
-            return Math.tanh(x > 0 ? x : x * 0.2);
+            return Math.tanh(x);
         }
 
 
