--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -47,6 +47,7 @@
             <li>removed crossover</li>
             <li>added crossover</li>
             <li>fish now have single antenna instead of eye array</li>
+            <li>fix bias</li>
         </div>
     </body>
 
