--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/gpu.js/1.0.2/gpu.min.js" integrity="sha512-cr2nuynSuSV6MGtWlympE0qd1g1TKBuEhv9lcfbW8HrE9UbPPc8zMwcje1fb9w2kzxqRnsizh6c+YbE6Ab7wpg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-        <script src="./matrix.js"></script>
+        <script src="./quadtree.js"></script>
         <script src="./fishbrainClassic.js"></script>
         <script src="./main.js"></script>
     </head>
@@ -65,7 +65,7 @@
         let inspectCtx = inspectCanvas.getContext("2d");
 
         
-        let sim = new Simulation(45);
+        let sim = new Simulation(50);
         
 
         let inspectedFish = 0;
