--- a/stuff/fish/genetic_fish.html
+++ b/stuff/fish/genetic_fish.html
@@ -55,6 +55,7 @@
             <li>fix bias</li>
             <li>various changes</li>
             <li>fish can now starve to death</li>
+            <li>health exists, size/speed energy consumption balance</li>
         </div>
     </body>
 
