--- a/stuff/procedural_hills/index.html
+++ b/stuff/procedural_hills/index.html
@@ -75,7 +75,7 @@
             text2.textVerticalAlignment = BABYLON.GUI.Control.VERTICAL_ALIGNMENT_TOP;
             text2.alpha = 0.5;
             advancedTexture.addControl(text2);
-            
+
 
 
             //directional light
@@ -726,7 +726,7 @@
         document.body.style.margin = '0px';
 
         //loop background music "phasing_through.ogg"
-        let bgm = new Audio("phasing_through.ogg");
+        let bgm = new Audio("./phasing_through.ogg");
         bgm.loop = true;
         //on keypress, play bgm
         document.addEventListener('keydown', function(){
