--- a/stuff/procedural_hills/index.html
+++ b/stuff/procedural_hills/index.html
@@ -726,7 +726,7 @@
         document.body.style.margin = '0px';
 
         //loop background music "phasing_through.ogg"
-        let bgm = new Audio("./phasing_through.ogg");
+        let bgm = new Audio("./Phasing_through.ogg");
         bgm.loop = true;
         //on keypress, play bgm
         document.addEventListener('keydown', function(){
