--- a/stuff/procedural_stuff/glow.html
+++ b/stuff/procedural_stuff/glow.html
@@ -4,7 +4,7 @@
     </head>
     <body>
         <script>
-            const gpu = new GPU({mode: "gpu"});
+            const gpu = new GPUJS({mode: "gpu"});
 
             const waveEmitters = Array(3);
             //0 is x, 1 is y, 3 is amplitude
