--- a/stuff/procedural_stuff/gpunoise.html
+++ b/stuff/procedural_stuff/gpunoise.html
@@ -17,7 +17,7 @@
 
 
 
-            let gpu = new GPU({mode: "gpu"});
+            let gpu = new GPUJS({mode: "gpu"});
 
             //add custom functions to the gpu
             
