--- a/stuff/procedural_stuff/mandelbrot.html
+++ b/stuff/procedural_stuff/mandelbrot.html
@@ -9,7 +9,7 @@
 
     <body>
         <script>
-            const gpu = new GPU();
+            const gpu = new GPUJS();
 
             //mandelbrot iteration
             function mandelbrot(x,y){
