--- a/games/snails/snailspam.html
+++ b/games/snails/snailspam.html
@@ -33,7 +33,12 @@
         setTimeout(function() {
             window.requestAnimationFrame(frame);
         }, 50);
-
+        function randomColor() {
+    let r = Math.floor(Math.random() * 255);
+    let g = Math.floor(Math.random() * 255);
+    let b = Math.floor(Math.random() *255);
+    return "rgb(" + r + "," + g + "," + b + ")";
+}
         
 
    </script>
